fix(mobile): fix mobile layout issues

--- a/astro_2.0/features/CreateDao/components/SubjectRule/SubjectRule.module.scss
+++ b/astro_2.0/features/CreateDao/components/SubjectRule/SubjectRule.module.scss
@@ -34,7 +34,11 @@
     flex-wrap: nowrap;
   }
 
-  > div:not(:last-of-type) {
+  > .optionCard {
+    margin-bottom: 16px;
+  }
+
+  > .optionCard:not(:last-of-type) {
     margin-right: 16px;
   }
 }
